[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/discord_game_sdk/examples/example.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="invite" type="Button" parent="."]
margin_left = 425.0
margin_top = 21.0
margin_right = 575.0
margin_bottom = 91.0
text = "create_lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create_lobby" type="Button" parent="."]
margin_left = 587.0
margin_top = 23.0
margin_right = 737.0
margin_bottom = 93.0
text = "invite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="secret" type="Label" parent="."]
margin_left = 41.0
margin_top = 130.0
margin_right = 280.0
margin_bottom = 202.0
text = "secret"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby_id" type="Label" parent="."]
margin_left = 39.0
margin_top = 152.0
margin_right = 278.0
margin_bottom = 224.0
text = "lobby_id"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error" type="Label" parent="."]
margin_left = 382.0
margin_top = 121.0
margin_right = 621.0
margin_bottom = 193.0
text = "error
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="log" type="TextEdit" parent="."]
margin_left = 556.0
margin_top = 323.0
margin_right = 1014.0
margin_bottom = 569.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chat" type="LineEdit" parent="."]
margin_left = 72.0
margin_top = 282.0
margin_right = 530.0
margin_bottom = 322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="TextEdit" parent="chat"]
margin_left = -4.0
margin_top = 44.0
margin_right = 454.0
margin_bottom = 290.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="member" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="member" parent="member" instance_placeholder="res://member.tscn"]

[connection signal="pressed" from="invite" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="create_lobby" to="." method="_on_invite_pressed"]
[connection signal="text_entered" from="chat" to="." method="_on_chat_text_entered"]
